faceting issue fixed. interview page style aligned with the rest of the site, button x with query term to clear the query

--- a/webapp/src/app/dashboard/dashboard.component.scss
+++ b/webapp/src/app/dashboard/dashboard.component.scss
@@ -7685,6 +7685,11 @@ a {
   font-size: 16px;
   line-height: 100%;
   text-align: center;
+  padding: 5px;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .buttons-container {
